# CodeVenture

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
app/: main.py
app/core/: config.py  db.py  db_helper.py  jwt.py  jwt_service.py  minio_client.py  rate_limit.py  redis.py  schemas.py  security.py  sso.py  taskiq.py
app/modules/auth/: dependencies.py  models.py  router.py  schemas.py  service.py  tasks.py
app/modules/products/: dependencies.py  models.py  router.py  schemas.py  service.py
app/modules/users/: dependencies.py  models.py  router.py  schemas.py  service.py
app/templates/: welcome.html
migrations/: env.py
migrations/versions/: 2025_12_06_1251-2bcedb40f576_add_basic_user_model.py  2025_12_06_1547-a2e8314f9a85_add_email_for_user_table.py  2025_12_06_1913-fbdb728c76bc_add_password_for_users_table.py  2025_12_06_1914-de822b02b291_add_nullable_variable_for_description.py  2025_12_12_1502-f3c1efda5a65_add_is_active_and_is_admin_variables_.py  2025_12_27_1255-491b5596a73a_add_nullable_for_user_model.py  2025_12_27_1339-b39f6dc03b05_add_nullable_attribute_for_user_model.py  2026_01_01_2324-aafe80be77ad_add_is_seller_method_for_usermodel.py  2026_01_02_0042-972df223718f_add_productmodel.py  2026_01_09_1721-16d34d6e647c_add_created_at_to_users.py  2026_01_14_1953-e7537a8f6402_add_title_and_description_for_product.py  2026_01_30_1914-3872d11c1be0_add_images_table_and_relationship_.py
tests/: auth_test.py  locust.py  user_test.py
